# polyscope_rt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera_preset.txt
cmake/: polyscope_rtConfig.cmake.in
docs/: knitgen-plan.md
examples/: curve_network_example.cpp  geometry_central_example.cpp  geometry_showcase_example.cpp  surface_mesh_example.cpp
include/polyscope/rt/: curve_network.h  material_library.h  options.h  plugin.h  point_cloud.h  simple_triangle_mesh.h  surface_mesh.h  volume_mesh.h
src/plugin/: polyscope_rt_plugin.cpp  polyscope_rt_runtime.cpp  polyscope_rt_runtime.h  polyscope_rt_runtime_gui.cpp
src/rendering/: backend_factory.cpp  environment_model.cpp  environment_model.h  environment_model_shared.h  gpu_shared_types.h  metal_path_tracer_backend.mm  metal_path_tracer_shaders.metal  ray_tracing_backend.h  ray_tracing_types.h  scene_packer.cpp  scene_packer.h  scene_packer_internal.h  scene_packer_mesh.cpp  scene_packer_primitives.cpp  scene_packer_shared.cpp  toon_shading.cpp  toon_shading.h
src/rendering/metal/: metal_backend.mm  metal_backend_internal.h  metal_backend_private.h  metal_backend_render.mm  metal_backend_scene.mm  metal_denoiser.h  metal_denoiser.mm  metal_device.h  metal_device.mm  metal_postprocess.h  metal_scene_builder.h  metal_scene_builder.mm  metal_standard_preset.mm  metal_test_harness.mm  metal_test_harness_private.h  metal_toon_preset.mm
src/rendering/metal/shaders/: intersection.metal  path_tracer.metal  path_tracer_bsdf.h  path_tracer_helpers.h  path_tracer_light_sampling.h  path_tracer_surface_utils.h  shader_common.h  standard_postprocess.metal  toon_postprocess.metal  utility.metal
src/scene/: direct_rt_curve_registry.cpp  direct_rt_curve_registry.h  polyscope_scene_snapshot.cpp  polyscope_scene_snapshot.h  polyscope_scene_snapshot_collectors.cpp  polyscope_scene_snapshot_hash.cpp  polyscope_scene_snapshot_internal.h  polyscope_scene_snapshot_vectors.cpp  ray_tracing_geometry_primitives.cpp  ray_tracing_geometry_primitives.h
src/utility/: rt_mesh_material_helpers.h
tests/: architecture_constraints_test.cpp  backend_download_test.cpp  backend_factory_test.cpp  backend_smoke_test.cpp  double_sided_test.cpp  emissive_lighting_test.cpp  environment_model_test.cpp  geometry_primitives_test.cpp  material_aov_test.cpp  mesh_shading_test.cpp  metal_backend_smoke_test.cpp  metal_shader_unit_test.cpp  normal_map_test.cpp  point_cloud_rendering_test.cpp  polyscope_rt_namespace_compatibility_test.cpp  polyscope_scene_snapshot_test.cpp  postprocess_test.cpp  preset_switching_test.cpp  quantity_extraction_test.cpp  rendering_quality_test.cpp  rendering_test_utils.h  scene_packer_test.cpp  snapshot_hash_test.cpp  test_helpers.h  toon_shading_test.cpp  transmission_test.cpp  vector_field_rendering_test.cpp  visible_light_test.cpp
tests/assets/LightEmissive/: light_emissive.gltf
tests/assets/golden/: vk_toon_robot_golden.ppm
tests/package_smoke/: CMakeLists.txt  main.cpp
